Cambios para el nombre en los KPI

--- a/InSiteLac.csproj
+++ b/InSiteLac.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Assets\LeanTouch\Scripts\LeanTouch.cs" />
     <Compile Include="Assets\Scripts\CamGryoAR.cs" />
     <Compile Include="Assets\Scripts\DiapositivaController.cs" />
+    <Compile Include="Assets\Scripts\Floater.cs" />
     <Compile Include="Assets\Scripts\MenuController.cs" />
     <Compile Include="Assets\Scripts\OrientacionScript.cs" />
     <Compile Include="Assets\Scripts\TouchController.cs" />
