--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -90,11 +90,10 @@
      <Compile Include="Assets\LeanTouch\Scripts\LeanSnapshot.cs" />
      <Compile Include="Assets\LeanTouch\Scripts\LeanTouch.cs" />
      <Compile Include="Assets\Scripts\CamGryoAR.cs" />
-     <Compile Include="Assets\Scripts\DiapositivaController.cs" />
+     <Compile Include="Assets\Scripts\Floater.cs" />
      <Compile Include="Assets\Scripts\MenuController.cs" />
      <Compile Include="Assets\Scripts\OrientacionScript.cs" />
      <Compile Include="Assets\Scripts\TouchController.cs" />
-     <Compile Include="Assets\Scripts\panelInfoController.cs" />
      <Compile Include="Assets\Vuforia\Scripts\BackgroundPlaneBehaviour.cs" />
      <Compile Include="Assets\Vuforia\Scripts\CloudRecoBehaviour.cs" />
      <Compile Include="Assets\Vuforia\Scripts\CylinderTargetBehaviour.cs" />
@@ -132,21 +131,62 @@
      <Compile Include="Assets\Vuforia\Scripts\WireframeBehaviour.cs" />
      <Compile Include="Assets\Vuforia\Scripts\WireframeTrackableEventHandler.cs" />
      <Compile Include="Assets\Vuforia\Scripts\WordBehaviour.cs" />
-     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
      <None Include="Assets\LeanTouch\Examples\Fonts\OFL.txt" />
+     <None Include="Assets\Plugins\Android\play-services-basement-license-11.8.0\third_party_licenses.txt" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
+     <None Include="Assets\Plugins\Android\firebase-messaging-unity-4.4.0\proguard.txt" />
      <None Include="Assets\link.xml" />
      <None Include="Assets\Vuforia\Shaders\VertexLitWithZ.shader" />
+     <None Include="Assets\Plugins\Android\firebase-messaging-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-license-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-unity-4.4.0\AndroidManifest.xml" />
+     <None Include="Assets\Firebase\Plugins\link.xml" />
+     <None Include="Assets\Plugins\Android\firebase-messaging-unity-4.4.0\R.txt" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-impl-license-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\firebase-app-unity-4.4.0\proguard.txt" />
      <None Include="Assets\Vuforia\Shaders\RenderVideoBackground.shader" />
+     <None Include="Assets\Plugins\Android\firebase-app-unity-4.4.0\R.txt" />
+     <None Include="Assets\Plugins\Android\firebase-iid-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\play-services-basement-license-11.8.0\AndroidManifest.xml" />
      <None Include="Assets\LeanTouch\Examples\Shaders\Skybox.shader" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-unity-4.4.0\R.txt" />
+     <None Include="Assets\Plugins\Android\Firebase\AndroidManifest.xml" />
+     <None Include="Assets\Firebase\Editor\AppDependencies.xml" />
+     <None Include="Assets\Plugins\Android\firebase-app-unity-4.4.0\AndroidManifest.xml" />
      <None Include="Assets\LeanTouch\Examples\Shaders\Smooth.shader" />
+     <None Include="Assets\Plugins\Android\firebase-common-license-11.8.0\AndroidManifest.xml" />
      <None Include="Assets\Vuforia\Shaders\VideoBackground.shader" />
+     <None Include="Assets\Firebase\m2repository\com\google\firebase\firebase-analytics-unity\maven-metadata.xml" />
+     <None Include="Assets\Plugins\Android\firebase-core-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\play-services-base-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Firebase\Editor\AnalyticsDependencies.xml" />
+     <None Include="Assets\Firebase\Editor\FirebaseMessaging_v4.4.0_manifest.txt" />
      <None Include="Assets\Vuforia\Editor\WebcamProfiles\profiles.xml" />
      <None Include="Assets\Vuforia\Shaders\DepthMask.shader" />
+     <None Include="Assets\Plugins\Android\Firebase\res\values\google-services.xml" />
+     <None Include="Assets\Plugins\Android\firebase-common-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-impl-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-unity-4.4.0\proguard.txt" />
+     <None Include="Assets\Plugins\Android\firebase-iid-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Firebase\m2repository\com\google\firebase\firebase-messaging-unity\maven-metadata.xml" />
+     <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\firebase-core-11.8.0\R.txt" />
+     <None Include="Assets\Firebase\m2repository\com\google\firebase\firebase-app-unity\maven-metadata.xml" />
+     <None Include="Assets\Plugins\Android\play-services-base-license-11.8.0\AndroidManifest.xml" />
      <None Include="Assets\StreamingAssets\Vuforia\PMI.xml" />
+     <None Include="Assets\Plugins\Android\firebase-iid-license-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\firebase-common-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\firebase-messaging-unity-4.4.0\AndroidManifest.xml" />
+     <None Include="Assets\Firebase\Editor\FirebaseAnalytics_v4.4.0_manifest.txt" />
      <None Include="Assets\Vuforia\Shaders\ClippingMask.shader" />
      <None Include="Assets\Vuforia\Shaders\BrightTexture.shader" />
+     <None Include="Assets\Plugins\Android\play-services-tasks-license-11.8.0\AndroidManifest.xml" />
+     <None Include="Assets\Plugins\Android\play-services-tasks-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\firebase-analytics-license-11.8.0\third_party_licenses.txt" />
+     <None Include="Assets\Plugins\Android\firebase-messaging-license-11.8.0\AndroidManifest.xml" />
      <None Include="Assets\Vuforia\Shaders\Text3D.shader" />
+     <None Include="Assets\PlayServicesResolver\Editor\play-services-resolver_v1.2.59.0.txt" />
+     <None Include="Assets\Firebase\Editor\MessagingDependencies.xml" />
  <Reference Include="UnityEngine.Analytics">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
@@ -167,6 +207,27 @@
  </Reference>
  <Reference Include="UnityEngine.VR">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
+ </Reference>
+ <Reference Include="Firebase.Analytics">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Firebase/Plugins/Firebase.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="Firebase.App">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Firebase/Plugins/Firebase.App.dll</HintPath>
+ </Reference>
+ <Reference Include="Firebase.Messaging">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Firebase/Plugins/Firebase.Messaging.dll</HintPath>
+ </Reference>
+ <Reference Include="Firebase.Platform">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Firebase/Plugins/Firebase.Platform.dll</HintPath>
+ </Reference>
+ <Reference Include="Google.MiniJson">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Firebase/Plugins/Google.MiniJson.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.Compat">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Parse/Plugins/Unity.Compat.dll</HintPath>
+ </Reference>
+ <Reference Include="Unity.Tasks">
+ <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Parse/Plugins/Unity.Tasks.dll</HintPath>
  </Reference>
  <Reference Include="Vuforia.UnityExtensions">
  <HintPath>/Users/ispmmx/Documents/In Site LAC v1.0 IOS/InSiteLac/Assets/Vuforia/Scripts/Internal/Vuforia.UnityExtensions.dll</HintPath>
